// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`app coverage generation runs coverage on templates when option is set 1`] = `
Object {
  "app/app.js": Object {
    "branches": Object {
      "covered": 0,
      "pct": 100,
      "skipped": 0,
      "total": 0,
    },
    "functions": Object {
      "covered": 0,
      "pct": 100,
      "skipped": 0,
      "total": 0,
    },
    "lines": Object {
      "covered": 4,
      "pct": 100,
      "skipped": 0,
      "total": 4,
    },
    "statements": Object {
      "covered": 4,
      "pct": 100,
      "skipped": 0,
      "total": 4,
    },
  },
  "app/components/test-component.js": Object {
    "branches": Object {
      "covered": 0,
      "pct": 100,
      "skipped": 0,
      "total": 0,
    },
    "functions": Object {
      "covered": 1,
      "pct": 100,
      "skipped": 0,
      "total": 1,
    },
    "lines": Object {
      "covered": 2,
      "pct": 100,
      "skipped": 0,
      "total": 2,
    },
    "statements": Object {
      "covered": 2,
      "pct": 100,
      "skipped": 0,
      "total": 2,
    },
  },
  "app/router.js": Object {
    "branches": Object {
      "covered": 0,
      "pct": 100,
      "skipped": 0,
      "total": 0,
    },
    "functions": Object {
      "covered": 1,
      "pct": 100,
      "skipped": 0,
      "total": 1,
    },
    "lines": Object {
      "covered": 3,
      "pct": 100,
      "skipped": 0,
      "total": 3,
    },
    "statements": Object {
      "covered": 3,
      "pct": 100,
      "skipped": 0,
      "total": 3,
    },
  },
  "app/templates/application.hbs": Object {
    "branches": Object {
      "covered": 0,
      "pct": 100,
      "skipped": 0,
      "total": 0,
    },
    "functions": Object {
      "covered": 0,
      "pct": 100,
      "skipped": 0,
      "total": 0,
    },
    "lines": Object {
      "covered": 3,
      "pct": 100,
      "skipped": 0,
      "total": 3,
    },
    "statements": Object {
      "covered": 3,
      "pct": 100,
      "skipped": 0,
      "total": 3,
    },
  },
  "app/templates/components/test-component.hbs": Object {
    "branches": Object {
      "covered": 0,
      "pct": 0,
      "skipped": 0,
      "total": 2,
    },
    "functions": Object {
      "covered": 0,
      "pct": 100,
      "skipped": 0,
      "total": 0,
    },
    "lines": Object {
      "covered": 2,
      "pct": 100,
      "skipped": 0,
      "total": 2,
    },
    "statements": Object {
      "covered": 2,
      "pct": 100,
      "skipped": 0,
      "total": 2,
    },
  },
  "app/utils/my-covered-util.js": Object {
    "branches": Object {
      "covered": 0,
      "pct": 100,
      "skipped": 0,
      "total": 0,
    },
    "functions": Object {
      "covered": 1,
      "pct": 100,
      "skipped": 0,
      "total": 1,
    },
    "lines": Object {
      "covered": 1,
      "pct": 100,
      "skipped": 0,
      "total": 1,
    },
    "statements": Object {
      "covered": 1,
      "pct": 100,
      "skipped": 0,
      "total": 1,
    },
  },
  "app/utils/my-uncovered-util.js": Object {
    "branches": Object {
      "covered": 0,
      "pct": 100,
      "skipped": 0,
      "total": 0,
    },
    "functions": Object {
      "covered": 0,
      "pct": 0,
      "skipped": 0,
      "total": 1,
    },
    "lines": Object {
      "covered": 0,
      "pct": 0,
      "skipped": 0,
      "total": 1,
    },
    "statements": Object {
      "covered": 0,
      "pct": 0,
      "skipped": 0,
      "total": 1,
    },
  },
  "total": Object {
    "branches": Object {
      "covered": 0,
      "pct": 0,
      "skipped": 0,
      "total": 2,
    },
    "functions": Object {
      "covered": 3,
      "pct": 75,
      "skipped": 0,
      "total": 4,
    },
    "lines": Object {
      "covered": 15,
      "pct": 93.75,
      "skipped": 0,
      "total": 16,
    },
    "statements": Object {
      "covered": 15,
      "pct": 93.75,
      "skipped": 0,
      "total": 16,
    },
  },
}
`;

exports[`app coverage generation runs coverage when env var is set 1`] = `
Object {
  "app/app.js": Object {
    "branches": Object {
      "covered": 0,
      "pct": 100,
      "skipped": 0,
      "total": 0,
    },
    "functions": Object {
      "covered": 0,
      "pct": 100,
      "skipped": 0,
      "total": 0,
    },
    "lines": Object {
      "covered": 4,
      "pct": 100,
      "skipped": 0,
      "total": 4,
    },
    "statements": Object {
      "covered": 4,
      "pct": 100,
      "skipped": 0,
      "total": 4,
    },
  },
  "app/components/test-component.js": Object {
    "branches": Object {
      "covered": 0,
      "pct": 100,
      "skipped": 0,
      "total": 0,
    },
    "functions": Object {
      "covered": 1,
      "pct": 100,
      "skipped": 0,
      "total": 1,
    },
    "lines": Object {
      "covered": 2,
      "pct": 100,
      "skipped": 0,
      "total": 2,
    },
    "statements": Object {
      "covered": 2,
      "pct": 100,
      "skipped": 0,
      "total": 2,
    },
  },
  "app/router.js": Object {
    "branches": Object {
      "covered": 0,
      "pct": 100,
      "skipped": 0,
      "total": 0,
    },
    "functions": Object {
      "covered": 1,
      "pct": 100,
      "skipped": 0,
      "total": 1,
    },
    "lines": Object {
      "covered": 3,
      "pct": 100,
      "skipped": 0,
      "total": 3,
    },
    "statements": Object {
      "covered": 3,
      "pct": 100,
      "skipped": 0,
      "total": 3,
    },
  },
  "app/utils/my-covered-util.js": Object {
    "branches": Object {
      "covered": 0,
      "pct": 100,
      "skipped": 0,
      "total": 0,
    },
    "functions": Object {
      "covered": 1,
      "pct": 100,
      "skipped": 0,
      "total": 1,
    },
    "lines": Object {
      "covered": 1,
      "pct": 100,
      "skipped": 0,
      "total": 1,
    },
    "statements": Object {
      "covered": 1,
      "pct": 100,
      "skipped": 0,
      "total": 1,
    },
  },
  "app/utils/my-uncovered-util.js": Object {
    "branches": Object {
      "covered": 0,
      "pct": 100,
      "skipped": 0,
      "total": 0,
    },
    "functions": Object {
      "covered": 0,
      "pct": 0,
      "skipped": 0,
      "total": 1,
    },
    "lines": Object {
      "covered": 0,
      "pct": 0,
      "skipped": 0,
      "total": 1,
    },
    "statements": Object {
      "covered": 0,
      "pct": 0,
      "skipped": 0,
      "total": 1,
    },
  },
  "total": Object {
    "branches": Object {
      "covered": 0,
      "pct": 100,
      "skipped": 0,
      "total": 0,
    },
    "functions": Object {
      "covered": 3,
      "pct": 75,
      "skipped": 0,
      "total": 4,
    },
    "lines": Object {
      "covered": 10,
      "pct": 90.91,
      "skipped": 0,
      "total": 11,
    },
    "statements": Object {
      "covered": 10,
      "pct": 90.91,
      "skipped": 0,
      "total": 11,
    },
  },
}
`;
